<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Permanent App Text -->
    <string name="app_name">Good News First</string>
    <string name="no_articles">Currently there are no stories for you. Please come back later and try again.</string>
    <string name="no_internet_connection">No internet connection. Please reconnect and try again.</string>
    <string name="powered_by">Powered by</string>

    <!-- Placeholder text -->
    <string name="article_trail_text">Trail text.</string>
    <string name="article_author">Author</string>
    <string name="article_section">World News</string>
    <string name="article_date">Jul, 4 \'18</string>
    <string name="article_time">08:00</string>
    <string name="article_headline">News Headline</string>

    <!-- Image descriptions -->
    <string name="image_desc_article_image">Article image - no description available from API.</string>
    <string name="image_desc_app_logo">App Logo - showing a thumbs up.</string>
    <string name="image_desc_guardian_logo">Guardian Logo</string>

    <!-- Settings Images -->
    <string name="settings_menu_item">Settings</string>
    <string name="refresh_menu_item">Refresh</string>

    <!-- Settings Text -->
    <string name="settings_title">News Settings</string>

    <!--Query values-->
    <string name="thumbnails_query_value">thumbnail</string>
    <string name="contributors_query_value">contributor</string>

    <!--Preference categories-->
    <string name="general_category">General</string>
    <string name="metadata_category">Metadata</string>

    <!-- Order preference-->
    <string name="pref_order_by_title">Order By</string>
    <string name="pref_order_by_key" translatable="false">order_by</string>
    <string name="pref_order_by_default">@string/pref_order_by_newest_value</string>
    <string name="pref_order_by_newest_label">Newest</string>
    <string name="pref_order_by_oldest_label">Oldest</string>
    <string name="pref_order_by_relevance_label">Relevance</string>
    <string name="pref_order_by_newest_value" translatable="false">newest</string>
    <string name="pref_order_by_oldest_value" translatable="false">oldest</string>
    <string name="pref_order_by_relevance_value" translatable="false">relevance</string>

    <string name="pref_order_by_newest_url" translatable="false">&amp;orderBy=newest</string>
    <string name="pref_order_by_oldest_url" translatable="false">&amp;orderBy=oldest</string>
    <string name="pref_order_by_relevance_url" translatable="false">&amp;orderBy=relevance</string>

    <!-- Topic preference-->
    <string name="pref_topic_title">Topic</string>
    <string name="pref_topic_key" translatable="false">topic</string>
    <string name="pref_topic_default">@string/pref_topic_0_label_value</string>
    <string name="pref_topic_0_label">Good News</string>
    <string name="pref_topic_1_label">U.S. News</string>
    <string name="pref_topic_2_label">World News</string>
    <string name="pref_topic_3_label">Sport</string>
    <string name="pref_topic_4_label">Business</string>
    <string name="pref_topic_5_label">Politics</string>
    <string name="pref_topic_6_label">Technology</string>
    <string name="pref_topic_7_label">Art &amp; Design</string>
    <string name="pref_topic_8_label">Culture</string>
    <string name="pref_topic_9_label">Education</string>
    <string name="pref_topic_10_label">Environment</string>
    <string name="pref_topic_11_label">Film</string>
    <string name="pref_topic_12_label">Life &amp; Style</string>
    <string name="pref_topic_13_label">Music</string>
    <string name="pref_topic_14_label">Science</string>
    <string name="pref_topic_15_label">Travel</string>
    <string name="pref_topic_16_label">Women in Leadership</string>
    <string name="pref_topic_0_label_value" translatable="false">TAG_GOODNEWS</string>
    <string name="pref_topic_1_label_value" translatable="false">SECTION_US_NEWS</string>
    <string name="pref_topic_2_label_value" translatable="false">SECTION_WORLD_NEWS</string>
    <string name="pref_topic_3_label_value" translatable="false">SECTION_SPORT</string>
    <string name="pref_topic_4_label_value" translatable="false">SECTION_BUSINESS</string>
    <string name="pref_topic_5_label_value" translatable="false">SECTION_POLITICS</string>
    <string name="pref_topic_6_label_value" translatable="false">SECTION_TECHNOLOGY</string>
    <string name="pref_topic_7_label_value" translatable="false">SECTION_ART_AND_DESIGN</string>
    <string name="pref_topic_8_label_value" translatable="false">SECTION_CULTURE</string>
    <string name="pref_topic_9_label_value" translatable="false">SECTION_EDUCATION</string>
    <string name="pref_topic_10_label_value" translatable="false">SECTION_ENVIRONMENT</string>
    <string name="pref_topic_11_label_value" translatable="false">SECTION_FILM</string>
    <string name="pref_topic_12_label_value" translatable="false">SECTION_LIFEANDSTYLE</string>
    <string name="pref_topic_13_label_value" translatable="false">SECTION_MUSIC</string>
    <string name="pref_topic_14_label_value" translatable="false">SECTION_SCIENCE</string>
    <string name="pref_topic_15_label_value" translatable="false">SECTION_TRAVEL</string>
    <string name="pref_topic_16_label_value" translatable="false">SECTION_WOMEN_IN_LEADERSHIP</string>
    <string name="pref_topic_0_label_url" translatable="false">tag=world/series/the-upside-weekly-report</string>
    <string name="pref_topic_1_label_url" translatable="false">section=us-news</string>
    <string name="pref_topic_2_label_url" translatable="false">section=world</string>
    <string name="pref_topic_3_label_url" translatable="false">section=sport&amp;editions=us/sport</string>
    <string name="pref_topic_4_label_url" translatable="false">section=business&amp;editions=us/business</string>
    <string name="pref_topic_5_label_url" translatable="false">tag=us-news/us-politics</string>
    <string name="pref_topic_6_label_url" translatable="false">section=technology&amp;editions=us/technology</string>
    <string name="pref_topic_7_label_url" translatable="false">section=artanddesign</string>
    <string name="pref_topic_8_label_url" translatable="false">section=culture&amp;editions=us/culture</string>
    <string name="pref_topic_9_label_url" translatable="false">section=education&amp;editions=us/education</string>
    <string name="pref_topic_10_label_url" translatable="false">section=environment&amp;editions=us/environment</string>
    <string name="pref_topic_11_label_url" translatable="false">section=film&amp;editions=us/film</string>
    <string name="pref_topic_12_label_url" translatable="false">section=lifeandstyle&amp;editions=us/lifeandstyle</string>
    <string name="pref_topic_13_label_url" translatable="false">section=music</string>
    <string name="pref_topic_14_label_url" translatable="false">section=science</string>
    <string name="pref_topic_15_label_url" translatable="false">section=travel&amp;editions=us/travel</string>
    <string name="pref_topic_16_label_url" translatable="false">section=women-in-leadership</string>

    <!--Thumbnails preference-->
    <string name="pref_thumbnail_title">Display Thumbnails</string>
    <string name="pref_thumbnail_key" translatable="false">display_images</string>
    <string name="pref_thumbnail_summary_on">Shown</string>
    <string name="pref_thumbnail_summary_off">Hidden</string>

    <!--Contributors preference-->
    <string name="pref_contributors_title">Display Contributors</string>
    <string name="pref_contributors_key" translatable="false">display_contributors</string>
    <string name="pref_contributors_summary_on">Shown</string>
    <string name="pref_contributors_summary_off">Hidden</string>

</resources>
