<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_category">

        <ListPreference
            android:defaultValue="@string/pref_topic_default"
            android:entries="@array/pref_topic_labels"
            android:entryValues="@array/pref_topic_values"
            android:key="@string/pref_topic_key"
            android:title="@string/pref_topic_title"
            android:dialogTitle="@string/pref_topic_title"
            android:summary="%s"/>

        <ListPreference
            android:defaultValue="@string/pref_order_by_default"
            android:entries="@array/pref_order_by_labels"
            android:entryValues="@array/pref_order_by_values"
            android:key="@string/pref_order_by_key"
            android:title="@string/pref_order_by_title"
            android:summary="%s"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/metadata_category">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_thumbnail_default"
            android:key="@string/pref_thumbnail_key"
            android:summaryOff="@string/pref_thumbnail_summary_off"
            android:summaryOn="@string/pref_thumbnail_summary_on"
            android:title="@string/pref_thumbnail_title"
            android:summary="%s"/>
    </PreferenceCategory>

</PreferenceScreen>