<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for a single list item that displays an newsArticle -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/playlist_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_s"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_s"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@animator/lift_on_touch"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/newslist_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <android.support.constraint.Group
                android:id="@+id/article_image_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="scrim,article_image" />

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_desc_article_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,16:9"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/newslist_constraint_layout"
                app:srcCompat="@drawable/guardian_placeholder" />

            <ImageView
                android:id="@+id/scrim"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/scrim"
                app:layout_constraintBottom_toBottomOf="@+id/article_image"
                app:layout_constraintEnd_toEndOf="@+id/article_image"
                app:layout_constraintStart_toStartOf="@+id/article_image"
                app:layout_constraintTop_toTopOf="@+id/article_image" />

            <TextView
                android:id="@+id/article_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_s"
                android:layout_marginRight="@dimen/margin_s"
                android:ellipsize="end"
                android:gravity="bottom"
                android:letterSpacing="0.05"
                android:maxLines="3"
                android:paddingBottom="@dimen/margin_s"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:paddingTop="@dimen/margin_s"
                android:text="@string/article_headline"
                android:textAppearance="@style/ArticleTitleText"
                app:layout_constraintBottom_toBottomOf="@+id/article_image"
                app:layout_constraintEnd_toEndOf="@+id/article_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/article_image" />

            <TextView
                android:id="@+id/article_trailtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorOverlay"
                android:maxLines="3"
                android:minLines="3"
                android:ellipsize="end"
                android:paddingBottom="@dimen/margin_s"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:paddingTop="@dimen/margin_s"
                android:text="@string/article_trail_text"
                android:textAppearance="@style/ArticleTrailText"
                app:layout_constraintEnd_toEndOf="@+id/article_image"
                app:layout_constraintStart_toStartOf="@+id/article_image"
                app:layout_constraintTop_toBottomOf="@+id/article_title" />

            <TextView
                android:id="@+id/article_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorOverlay"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_s"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:text="@string/article_author"
                android:textAppearance="@style/ArticleAuthorText"
                app:layout_constraintBottom_toBottomOf="@+id/newslist_constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/article_section"
                app:layout_constraintStart_toStartOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toBottomOf="@+id/article_trailtext" />

            <TextView
                android:id="@+id/article_section"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right|center_vertical|end"
                android:background="@color/backgroundColorOverlay"
                android:gravity="center_vertical|end"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_s"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:text="@string/article_section"
                android:textAppearance="@style/ArticleSectionText"
                app:layout_constraintBottom_toBottomOf="@+id/newslist_constraint_layout"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toBottomOf="@+id/article_trailtext" />

            <TextView
                android:id="@+id/article_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_l"
                android:layout_marginRight="@dimen/margin_l"
                android:background="@drawable/date_background_tint_alpha"
                android:gravity="center_horizontal"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:paddingTop="@dimen/margin_s"
                android:text="@string/article_date"
                android:textAppearance="@style/ArticleDateTimeText"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/newslist_constraint_layout" />

            <TextView
                android:id="@+id/article_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/date_background_tint_alpha"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/margin_s"
                android:paddingEnd="@dimen/margin_s"
                android:paddingStart="@dimen/margin_s"
                android:text="@string/article_time"
                android:textAppearance="@style/ArticleDateTimeText"
                app:layout_constraintEnd_toEndOf="@+id/article_date"
                app:layout_constraintStart_toStartOf="@+id/article_date"
                app:layout_constraintTop_toBottomOf="@+id/article_date" />

            <ImageView
                android:id="@+id/bookmark_tail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:alpha=".65"
                android:contentDescription="@null"
                android:cropToPadding="false"
                android:paddingBottom="@dimen/margin_xl"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/article_date"
                app:layout_constraintStart_toStartOf="@+id/article_date"
                app:layout_constraintTop_toBottomOf="@+id/article_time"
                app:srcCompat="@drawable/bookmark" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>